--- a/index.html
+++ b/index.html
@@ -57,6 +57,110 @@
             touch-action: manipulation;
             /* width: 100%; */
         }
+
+        /* Jendela Pop Up */
+        #popup {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            background: rgba(0,0,0,.7);
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            visibility: hidden;
+        }
+
+        #popup2 {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            background: rgba(0,0,0,.7);
+            top: 0;
+            left: 0;
+            z-index: 9999;
+            visibility: hidden;
+        }
+
+        .window {
+            width: 828px;
+            height: 416px;
+            background: #fff;
+            border-radius: 8px;
+            position: relative;
+            padding: 10px;
+            text-align: center;
+            margin: 15% auto;
+        }
+        .window h2 {
+            margin: 30px 0 0 0;
+        }
+        /* Button Close */
+        .close-button {
+            width: 6%;
+            height: 6%;
+            line-height: 23px;
+            background: white;
+            border-radius: 50%;
+            border: 3px solid #fff;
+            display: block;
+            text-align: center;
+            color: black;
+            text-decoration: none;
+            position: absolute;
+            top: 10px;
+            right: 1px;
+            z-index: 999;
+            font-size: 30px;
+        }
+
+        /* Memunculkan Jendela Pop Up*/
+        #popup:target {
+            visibility: visible;
+        }
+
+        #popup2:target {
+            visibility: visible;
+        }
+
+        .for-popup{
+            text-align: left;
+            margin-left: 10px;
+            font-size: 24px;
+            color: #0BB4AC;
+            font-weight: 700;
+            font-family: 'IBM Plex Sans';
+            line-height: 16px;
+        }
+
+        .for-popup2{
+            text-align: left;
+            margin-left: 10px;
+            font-size: 16px;
+            font-weight: 400;
+            font-family: 'IBM Plex Sans';
+            line-height: 16px;
+        }
+
+        .for-popup3{
+            text-align: left;
+            margin-left: 10px;
+            font-size: 14px;
+            font-weight: 400;
+            font-family: 'IBM Plex Sans';
+            line-height: 16px;
+        }
+
+        .label-popup {
+            background: #E0E0E0;
+            color: black;
+            display: inline-block;
+            padding: 2px 7px;
+            font-size: 14px;
+            font-weight: 400;
+            /* line-height: 16px; */
+            border: 1px solid transparent;
+            border-radius: 8px;
+        }
     </style>
 </head>
 
@@ -77,6 +181,63 @@
             </div>
         </div>
     </div>
+
+    <div id="popup2">
+    	<div class="window" style="text-align: left;">
+        	<a href="#" class="close-button" title="Close">X</a>
+            <h2 class="for-popup" style="margin-left:10px; margin-top: 20px;">Patient Conversation History</h2>
+            <p class="for-popup2" style="margin-left:10px; margin-top: 30px;">These are the patients conversation history over these past years.</p>
+            <p class="for-popup3" style="margin-left:10px; margin-top: 40px;">September 2023</p>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Chat Record 12092023.pdf
+            </span>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Chat Record 08092023.pdf
+            </span>
+
+            <p class="for-popup3" style="margin-left:10px; margin-top: 30px;">August 2023</p>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Chat Record 16082023.pdf
+            </span>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Chat Record 05082023.pdf
+            </span>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Chat Record 01082023.pdf
+            </span>
+        </div>
+    </div>
+
+
+    <div id="popup">
+    	<div class="window" style="text-align: left;">
+        	<a href="#" class="close-button" title="Close">X</a>
+            <h2 class="for-popup" style="margin-left:10px; margin-top: 20px;">Medical Records and Documents</h2>
+            <p class="for-popup2" style="margin-left:10px; margin-top: 30px;">These are the patients-related documents in medical database</p>
+            <p class="for-popup3" style="margin-left:10px; margin-top: 40px;">Information Records</p>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Medical Record.pdf
+            </span>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Allergy Form.pdf
+            </span>
+
+            <p class="for-popup3" style="margin-left:10px; margin-top: 30px;">Lab Results</p>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - Xray.pdf
+            </span>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - CT-Scan.pdf
+            </span>
+
+            <p class="for-popup3" style="margin-left:10px; margin-top: 30px;">Invoice</p>
+            <span class="label-popup" style="height: 44px;line-height: 35px; margin-left: 10px; margin-top: 10px;">
+                <img src="./test_files/shared.png" width="20" height="20" style="display:inline-block;">&emsp;[Dewi Sinta] - 24032023.pdf
+            </span>
+        </div>
+    </div>
+
+
     <div class="md:pl-16 pt-16" style="padding-left: 0px;">
         <div class="-mt-16 ml-auto xl:-ml-16 mr-auto xl:pl-16 pt-16 xl:h-screen w-auto sm:w-3/5 xl:w-auto grid grid-cols-12 gap-6">
 
@@ -87,11 +248,15 @@
                         font-size: 20px;
                         font-weight: 700;
                         font-family: 'IBM Plex Sans';">Patient Electronic Medical Record</h3>
-                        <div style=" float:left; width:48.5%; height:76px      ; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; ">
-                            <span style="display:inline-block;"><img src="./test_files/medical-template.png" width="596" height="76"></span>
+                        <div style=" float:left; width:48.5%; height:76px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; ">
+                            <a href="#popup">
+                                <span style="display:inline-block;"><img src="./test_files/medical-template.png" width="596" height="76"></span>
+                            </a>
                         </div>
                         <div style="float:right;width: 48.5%; height:76px;background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px; ">
-                            <span style="display:inline-block;"><img src="./test_files/patient-template.png" width="596" height="76"></span>
+                            <a href="#popup2">
+                                <span style="display:inline-block;"><img src="./test_files/patient-template.png" width="596" height="76"></span>
+                            </a>
                         </div>
                         <div style="float:left;width: 48.5%;height:300px;background-color: #F8F8F8;margin-bottom: 5px;border-radius: 8px;">
                             <div class="text-base font-medium" style="padding:10px;background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center;border-radius: 8px 8px 0 0;">
@@ -185,14 +350,14 @@
                         </div>
                         <div style="float:right;width: 48.5%; height:300px; margin-left: 10px; margin-bottom: 15px; ">
                             <div class="text-base font-medium " style="padding:10px;font-family: 'IBM Plex Sans';font-weight: 600;">Prescription</div>
-                            <form id="form">
-                                <textarea id="presq" rows="7" cols="50" placeholder="Type your prescription here for the patient..." style="resize: none;width: 100%; border-radius: 5px;padding: 10px;">
+                            <!-- <form id="form"> -->
+                                <textarea name="w3review" id="presq" rows="7" cols="50" placeholder="Type your prescription here for the patient..." style="resize: none;width: 100%; border-radius: 5px;padding: 10px;">
                                 </textarea>
                                 <div style="text-align: right;">
                                     <button class="button-last" style="background-color: transparent; color:blue;" role="button">Reset all</button>
                                     <button class="button-last" role="button" id="savePres" type="submit">Save</button>
                                 </div>
-                            </form>
+                            <!-- </form> -->
                         </div>
                     </div>
                 </div>
