--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <body class="main" data-new-gr-c-s-check-loaded="14.1125.0" data-gr-ext-installed="" style="background-color: white;">
     <div class="top-bar top-0 left-0 fixed w-full h-16">
         <div class="-intro-y top-bar__content bg-white border-theme-3 dark:bg-dark-2 dark:border-dark-2 border-b w-full h-full flex px-5" style="background-color: #0BB4AC;">
-            <p class="hidden md:flex items-center h-full mr-auto" style="color: white;font-size: 16px;font-weight: 700;">Medical Portal</p>
+            <p class="hidden md:flex items-center h-full mr-auto" style="color: white;font-size: 16px;font-weight: 700;font-family: 'IBM Plex Sans';">Medical Portal</p>
             <div class="account-dropdown dropdown relative">
                 <a href="javascript:;" class="h-full dropdown-toggle flex items-center pl-5">
                     <div class="hidden md:block ml-3">
@@ -246,7 +246,7 @@
 
     <div id="popup-add-more">
         <div class="window" style="text-align: left;">
-            <a href="#" class="close-button" title="Close">X</a>
+            <a href="#" class="close-button" title="Close"><img src="./test_files/close.png"></a>
             <h2 class="for-popup" style="margin-left:10px; margin-top: 20px;">Add New Medical History</h2>
             <p class="for-popup2" style="margin-left:10px; margin-top: 30px;">Add new medical history which has not been recorded in patient’s database</p>
             <p class="for-popup3" style="margin-left:10px; margin-top: 40px; font-weight: bold;">Medical History</p>
@@ -261,7 +261,7 @@
 
     <div id="popup-chronic-condition">
         <div class="window" style="text-align: left; height: 530px;">
-            <a href="#" class="close-button" title="Close">X</a>
+            <a href="#" class="close-button" title="Close"><img src="./test_files/close.png"></a>
             <h2 class="for-popup" style="margin-left:10px; margin-top: 20px;">Chronic Condition</h2>
             <p class="for-popup-chronic" style="margin-left:10px; margin-top: 30px;">Food Allergy</p>
 
@@ -285,7 +285,7 @@
 
     <div id="popup-warning-chronic">
         <div class="window" style="text-align: left; height: 350px;">
-            <a href="#" class="close-button" title="Close">X</a>
+            <a href="#" class="close-button" title="Close"><img src="./test_files/close.png"></a>
             <div style="width:100%">
                 <div style="float: left; width: 15%; margin-top: 12px;">
                     <img src="./test_files/warning-doctor.png" width="87" height="163" style="margin: auto;">
@@ -315,7 +315,7 @@
 
     <div id="popup2">
         <div class="window" style="text-align: left;">
-            <a href="#" class="close-button" title="Close">X</a>
+            <a href="#" class="close-button" title="Close"><img src="./test_files/close.png"></a>
             <h2 class="for-popup" style="margin-left:10px; margin-top: 20px;">Patient Conversation History</h2>
             <p class="for-popup2" style="margin-left:10px; margin-top: 30px;">These are the patients conversation history over these past years.</p>
             <p class="for-popup3" style="margin-left:10px; margin-top: 40px;">September 2023</p>
@@ -350,8 +350,8 @@
     </div>
 
     <div id="popup">
-        <div class="window" style="text-align: left;">
-            <a href="#" class="close-button" title="Close">X</a>
+        <div class="window" style="text-align: left; height:445px;">
+            <a href="#" class="close-button" title="Close"><img src="./test_files/close.png"></a>
             <h2 class="for-popup" style="margin-left:10px; margin-top: 20px;">Medical Records and Documents</h2>
             <p class="for-popup2" style="margin-left:10px; margin-top: 30px;">These are the patients-related documents in medical database</p>
             <p class="for-popup3" style="margin-left:10px; margin-top: 40px;">Information Records</p>
@@ -379,7 +379,6 @@
 
     <div class="md:pl-16 pt-16" style="padding-left: 0px;">
         <div class="-mt-16 ml-auto xl:-ml-16 mr-auto xl:pl-16 pt-16 xl:h-screen w-auto sm:w-3/5 xl:w-auto grid grid-cols-12 gap-6">
-
             <div class="info-content col-span-12 xl:col-span-6 flex flex-col overflow-hidden pl-6 xl:pl-0 pr-6" style="grid-column: span 8/span 8; margin-left: 15px;">
                 <div class="overflow-y-auto scrollbar-hidden py-6">
                     <div class="intro-y box relative px-4 py-6" style="padding: 0; background-color: transparent;">
@@ -397,14 +396,14 @@
                                 <span style="display:inline-block;"><img src="./test_files/patient-template.png" width="596" height="76"></span>
                             </a>
                         </div>
-                        <div style="float:left;width: 48.5%;height:300px;background-color: #F8F8F8;margin-bottom: 5px;border-radius: 8px;">
+                        <div style="float:left;width: 48.5%;height:300px;background-color: #F8F8F8;margin-bottom: 5px;border-radius: 8px;font-family: 'IBM Plex Sans';">
                             <div class="text-base font-medium" style="padding:10px;background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center;border-radius: 8px 8px 0 0;">
                                 Patient Demographic
                             </div>
                             <div style="float:left;width: 10%;margin: 15px;">
                                 <img src="./test_files/foto.png" width="60" height="60">
                             </div>
-                            <div style="float:left;width: 36%;margin: 15px;">
+                            <div style="float:left;width: 36%;margin: 15px; ">
                                 <p>Name</p>
                                 <p style="font-weight: bold;">Dewi Sinta</p>
                                 <p style="margin-top: 10px;">Sex</p>
@@ -427,7 +426,7 @@
                                 <p style="font-weight: bold;">628907654312</p>
                             </div>
                         </div>
-                        <div style=" float:right; width:48.5%; height:300px; background-color: #F8F8F8; margin-bottom: 5px; border-radius: 8px;">
+                        <div style=" float:right; width:48.5%; height:300px; background-color: #F8F8F8; margin-bottom: 5px; border-radius: 8px;font-family: 'IBM Plex Sans';">
                             <div class="text-base font-medium" style="padding: 10px; background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center;border-radius: 8px 8px 0 0;">Medical History</div>
                             <p style="padding: 10px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Disease History </p>
                             <span class="label-kemenkes" style="margin-left: 10px;">Anemia</span>
@@ -447,8 +446,8 @@
                             <span class="label-kemenkes">High Blood Pressure</span>
                             <a href="#popup-add-more"><span class="label-add-more">+ Add more</span></a>
                         </div>
-                        <div style=" float:left; width:48.5%; height:175px      ; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; ">
-                            <div class="text-base font-medium " style="padding:10px;background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center;border-radius: 8px 8px 0 0; ">Known Allergies</div>
+                        <div style=" float:left; width:48.5%; height:175px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; font-family: 'IBM Plex Sans';">
+                            <div class="text-base font-medium " style="padding:10px;background-color: #0BB4AC; color: white;font-weight: 600;text-align: center;border-radius: 8px 8px 0 0; ">Known Allergies</div>
                             <p style="padding-left: 10px; padding-bottom: 5px; padding-top: 5px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Food Allergy </p>
                             <span class="label-kemenkes" style="margin-left: 10px;">Peanut</span>
                             <span class="label-kemenkes">Dairy Products</span>
@@ -459,7 +458,7 @@
                             <span class="label-kemenkes">Medixon</span>
                             <span class="label-add-more">+ Add more</span>
                         </div>
-                        <div style="float:right;width: 48.5%; height:175px;background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px; ">
+                        <div style="float:right;width: 48.5%; height:175px;background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px;font-family: 'IBM Plex Sans'; ">
                             <div class="text-base font-medium " style="padding:10px;background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center; border-radius: 8px 8px 0 0;">Chronic Condition</div>
                             <p style="padding-left: 10px; padding-bottom: 5px; padding-top: 5px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Acute</p>
                             <a href="#popup-chronic-condition"><span class="label-kemenkes" style="margin-left: 10px;">Food Allergy</span></a>
@@ -471,17 +470,16 @@
                             <a href="#popup-chronic-condition"> <span class="label-kemenkes">Liver Disease</span></a>
                             <a href="#popup-add-more"><span class="label-add-more"> + Add more</span></a>
                         </div>
-                        <div style=" float:left; width:48.5%; height: 300px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px;    background-image: linear-gradient(180deg, #ECFEFD 0%, #9FF9F4 100%);">
-                            <div class="text-base font-medium " style="padding:10px;font-family: 'IBM Plex Sans';font-weight: 600; font-size: 16px; ">Medical Insight</div>
-
+                        <div style=" float:left; width:48.5%; max-height: 500px; height: 330px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px;    background-image: linear-gradient(180deg, #ECFEFD 0%, #9FF9F4 100%);font-family: 'IBM Plex Sans';">
+                            <div class="text-base font-medium " style="padding:10px;font-weight: 600; font-size: 16px; ">Medical Insight</div>
                             <div style="border-radius: 4px; margin:10px; background-color: white;">
-                                <p style="font-family: 'IBM Plex Sans';font-weight: 400; font-size: 15px; padding: 10px;">Based on allergies listed for the patient,
+                                <p style="font-weight: 400; font-size: 15px; padding: 10px;">Based on allergies listed for the patient,
                                     <span style="color:red;font-weight: 700;">avoid</span> this following drugs:</p>
                                 <span class="label-kemenkes" style="margin-left: 10px; background-color: #f4f4f4;color: black;">Antibiotics</span>
                                 <span class="label-kemenkes" style="background-color: #f4f4f4;color: black;">Aspirin</span>
                                 <span class="label-kemenkes" style="background-color: #f4f4f4;color: black;">Sulfa Drugs</span>
 
-                                <p style="font-family: 'IBM Plex Sans';font-weight: 400; font-size: 13px; padding: 10px; font-style: italic;">Existing medication for Chronic Hypertension may interfere with this prescription</p>
+                                <p style="font-weight: 400; font-size: 13px; padding: 10px; font-style: italic;">Existing medication for Chronic Hypertension may interfere with this prescription</p>
                             </div>
 
                             <div style="border-radius: 4px; margin:10px; background-color: white;">
@@ -494,8 +492,8 @@
                                 <p style="font-family: 'IBM Plex Sans';font-weight: 400; font-size: 13px; padding: 10px; font-style: italic;">Call for consultation thereafter if condition persists</p>
                             </div>
                         </div>
-                        <div style="float:right;width: 48.5%; height:300px; margin-left: 10px; margin-bottom: 15px; ">
-                            <div class="text-base font-medium " style="font-family: 'IBM Plex Sans';font-weight: 600;">Prescription</div>
+                        <div style="float:right;width: 48.5%; height:300px; margin-left: 10px; margin-bottom: 15px;font-family: 'IBM Plex Sans'; ">
+                            <div class="text-base font-medium " style="font-weight: 600;">Prescription</div>
                             <textarea name="w3review" id="presq" rows="7" cols="50" placeholder="Type your prescription here for the patient..." style="resize: none;width: 100%; border-radius: 5px;padding: 10px; border: 1px solid #E0E0E0;">
                                 </textarea>
                             <div style="text-align: right;">
@@ -509,7 +507,7 @@
             <div class="chat-box border-theme-5 col-span-12 xl:col-span-3 flex flex-col overflow-hidden xl:border-l xl:border-r p-6" style="grid-column: span 4/span 4;">
                 <div class="intro-y box border border-theme-3 dark:bg-dark-2 dark:border-dark-2 flex items-center px-5 py-4">
                     <div class="flex items-center mr-auto">
-                        <h2 style="font-size: 14px; font-weight: 700; ">
+                        <h2 style="font-size: 14px; font-weight: 700;font-family: 'IBM Plex Sans';">
                             Chat Preview
                         </h2>
                     </div>
