--- a/medical-history.html
+++ b/medical-history.html
@@ -154,10 +154,15 @@
             <div class="info-content col-span-12 xl:col-span-6 flex flex-col overflow-hidden pl-6 xl:pl-0 pr-6" style="grid-column: span 8/span 8; margin-left: 15px;">
                 <div class="overflow-y-auto scrollbar-hidden py-6">
                     <div class="intro-y box relative px-4 py-6" style="padding: 0; background-color: transparent; box-shadow: none;">
-                        <h3 style="padding-bottom: 20px;" class="font-title">
-                            <a href="index.html">
-                                <--</a> Chat Historical Record</h3>
-                        <div style="width: 100%; height: 120px;">
+                        <div style="width:100%;padding-bottom: 20px;height: 50px;">
+                            <div style="float: left;width: 5%;display: flex;justify-content: center;align-items: center;">
+                                <a href="index.html"><img src="./test_files/toleft.png" width="30" height="30"></a>
+                            </div>
+                            <div style="float: right;width: 95%;line-height: 28px;"  class="font-title">
+                                <h3  class="font-title">Chat Historical Record</h3> 
+                            </div>
+                        </div>
+                        <div style="width: 100%; height: 120px; font-family: 'IBM Plex Sans';">
                             <div style="float:left;width: 7%;margin: 10px;">
                                 <img src="./test_files/patient-info.png" width="60" height="60">
                             </div>
@@ -182,7 +187,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div style="width: 100%; height: 120px; border-bottom: 1px solid #E0E0E0;">
+                        <div style="width: 100%; height: 120px; border-bottom: 1px solid #E0E0E0; font-family: 'IBM Plex Sans';">
                             <div style="float:left;width: 7%;margin: 10px;">
                                 <img src="./test_files/chat.png" width="60" height="60">
                             </div>
@@ -312,97 +317,97 @@
             <div class="chat-box border-theme-5 col-span-12 xl:col-span-3 flex flex-col overflow-hidden xl:border-l xl:border-r p-6" style="grid-column: span 4/span 4;">
                 <div class="intro-y box border border-theme-3 dark:bg-dark-2 dark:border-dark-2 flex items-center px-5 py-4">
                     <div class="flex items-center mr-auto">
-                        <h2 style="font-size: 14px; font-weight: 700;">
+                        <h2 style="font-size: 14px; font-weight: 700;font-family: 'IBM Plex Sans';">
                             Activity log
                         </h2>
                     </div>
                 </div>
-                <div class="overflow-y-scroll scrollbar-hidden pt-5 flex-1" id="outputDiv1" style="background-color: #E0E0E0;">
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                <div class="overflow-y-scroll scrollbar-hidden pt-5 flex-1" id="outputDiv1" style="background-color: #E0E0E0;    font-family: 'IBM Plex Sans';">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/user.png"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:30 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;">Patient ended the chat.</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none; font-size: 15px;">Patient ended the chat.</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
                         </div>
                     </div>
                     <div class="clear-both"></div>
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/doctor.jpeg"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 08:10 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;">You updated the prescription for Dewi Sinta</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;font-size: 15px;">You updated the prescription for Dewi Sinta</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
                         </div>
                     </div>
                     <div class="clear-both"></div>
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/doctor.jpeg"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 08:00 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;">You updated the prescription for Dewi Sinta</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;font-size: 15px;">You updated the prescription for Dewi Sinta</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
                         </div>
                     </div>
                     <div class="clear-both"></div>
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/doctor.jpeg"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:35 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;">You validated patient’s birthdate</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">You validated patient’s birthdate</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
                         </div>
                     </div>
                     <div class="clear-both"></div>
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/doctor.jpeg"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:34 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;">You initiated chat with Dewi Sinta</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">You initiated chat with Dewi Sinta</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
                         </div>
                     </div>
                     <div class="clear-both"></div>
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/chatbot.png"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:33 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;">Chatbot confirmed patient identity</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">Chatbot confirmed patient identity</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
                         </div>
                     </div>
                     <div class="clear-both"></div>
-                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;">
+                    <div class="intro-x chat-text-box flex items-end float-left mb-4" style="max-width: 100%;margin-left: 20px;">
                         <div class="chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4" style="margin-left:5px;"><img class="rounded-full" src="./test_files/user.png"></div>
                         <div class="w-full">
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:30 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;">Patient initiated the chat.</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">Patient initiated the chat.</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
