--- a/index.html
+++ b/index.html
@@ -386,17 +386,34 @@
                         font-size: 20px;
                         font-weight: 700;
                         font-family: 'IBM Plex Sans';">Patient Electronic Medical Record</h3>
-                        <div style=" float:left; width:48.5%; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; ">
-                            <a href="#popup">
-                                <span style="display:inline-block;"><img src="./test_files/medical-template.png" width="596" height="76"></span>
-                            </a>
-                        </div>
-                        <div style="float:right;width: 48.5%; background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px; ">
-                            <a href="#popup2">
-                                <span style="display:inline-block;"><img src="./test_files/patient-template.png" width="596" height="76"></span>
-                            </a>
-                        </div>
-                        <div style="float:left;width: 48.5%;height:300px;background-color: #F8F8F8;margin-bottom: 5px;border-radius: 8px;font-family: 'IBM Plex Sans';">
+                        <a href="#popup">
+                            <div style=" float:left; width:48.5%; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; height:76px; ">
+                                <div style="float:left; width: 15%; justify-content: center;display: flex;align-items: center;height: 76px;">
+                                    <img src="./test_files/medical.png" width="52" height="52">
+                                </div>
+                                <div style="float:left; width: 78%;font-family: 'IBM Plex Sans'; font-size: 18px; font-weight: bold; line-height: 70px;text-align: center;">
+                                    Medical Records and Documents
+                                </div>
+                                <div style="float:right;width: 7%;justify-content: center;display: flex;align-items: center;height: 76px;">
+                                    <img src="./test_files/toright.png" width="24" height="24">
+                                </div>
+                            </div>
+                        </a>
+                        <a href="#popup2">
+                            <div style="float:right;width: 48.5%; background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px; ">
+                                <div style="float:left; width: 15%; justify-content: center;display: flex;align-items: center;height: 76px;">
+                                    <img src="./test_files/patient.png" width="52" height="52">
+                                </div>
+                                <div style="float:left; width: 78%;font-family: 'IBM Plex Sans'; font-size: 18px; font-weight: bold; line-height: 70px;text-align: center;">
+                                    Patient Conversation History
+                                </div>
+                                <div style="float:right;width: 7%;justify-content: center;display: flex;align-items: center;height: 76px;">
+                                    <img src="./test_files/toright.png" width="24" height="24">
+                                </div>
+                            </div>
+                        </a>
+                       
+                        <div style="float:left;width: 48.5%;height:300px;background-color: #F8F8F8;margin-bottom: 15px;border-radius: 8px;font-family: 'IBM Plex Sans';">
                             <div class="text-base font-medium" style="padding:10px;background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center;border-radius: 8px 8px 0 0;">
                                 Patient Demographic
                             </div>
@@ -426,7 +443,7 @@
                                 <p style="font-weight: bold;">628907654312</p>
                             </div>
                         </div>
-                        <div style=" float:right; width:48.5%; height:300px; background-color: #F8F8F8; margin-bottom: 5px; border-radius: 8px;font-family: 'IBM Plex Sans';">
+                        <div style=" float:right; width:48.5%; height:300px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px;font-family: 'IBM Plex Sans';">
                             <div class="text-base font-medium" style="padding: 10px; background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center;border-radius: 8px 8px 0 0;">Medical History</div>
                             <p style="padding: 10px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Disease History </p>
                             <span class="label-kemenkes" style="margin-left: 10px;">Anemia</span>
@@ -446,9 +463,9 @@
                             <span class="label-kemenkes">High Blood Pressure</span>
                             <a href="#popup-add-more"><span class="label-add-more">+ Add more</span></a>
                         </div>
-                        <div style=" float:left; width:48.5%; height:175px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; font-family: 'IBM Plex Sans';">
+                        <div style=" float:left; width:48.5%; height:185px; background-color: #F8F8F8; margin-bottom: 15px; border-radius: 8px; font-family: 'IBM Plex Sans';">
                             <div class="text-base font-medium " style="padding:10px;background-color: #0BB4AC; color: white;font-weight: 600;text-align: center;border-radius: 8px 8px 0 0; ">Known Allergies</div>
-                            <p style="padding-left: 10px; padding-bottom: 5px; padding-top: 5px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Food Allergy </p>
+                            <p style="padding-left: 10px; padding-bottom: 5px; padding-top: 10px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Food Allergy </p>
                             <span class="label-kemenkes" style="margin-left: 10px;">Peanut</span>
                             <span class="label-kemenkes">Dairy Products</span>
                             <span class="label-add-more">+ Add more</span>
@@ -458,9 +475,9 @@
                             <span class="label-kemenkes">Medixon</span>
                             <span class="label-add-more">+ Add more</span>
                         </div>
-                        <div style="float:right;width: 48.5%; height:175px;background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px;font-family: 'IBM Plex Sans'; ">
+                        <div style="float:right;width: 48.5%; height:185px;background-color: #F8F8F8; margin-left: 10px;  border-radius: 8px; margin-bottom: 15px;font-family: 'IBM Plex Sans'; ">
                             <div class="text-base font-medium " style="padding:10px;background-color: #0BB4AC; color: white;font-family: 'IBM Plex Sans';font-weight: 600;text-align: center; border-radius: 8px 8px 0 0;">Chronic Condition</div>
-                            <p style="padding-left: 10px; padding-bottom: 5px; padding-top: 5px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Acute</p>
+                            <p style="padding-left: 10px; padding-bottom: 5px; padding-top: 10px; font-family: 'IBM Plex Sans'; font-size: 14px; font-weight: 400;">Acute</p>
                             <a href="#popup-chronic-condition"><span class="label-kemenkes" style="margin-left: 10px;">Food Allergy</span></a>
                             <a href="#popup-chronic-condition"><span class="label-kemenkes">Cough</span></a>
                             <span class="label-add-more">+ Add more</span>
@@ -589,8 +606,9 @@
                 var completed = "";
                 var message = ('' + m).replace(/[<>]/g, '');
                 if (id === publisher) {
-                    // Interactive Demo only
-                    completed = "<div class='intro-x chat-text-box flex items-end float-left mb-4'><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4' style='margin-left:5px;'><img class='rounded-full' src='./test_files/doctor.jpeg'></div><div class='w-full'><div><div class='chat-text-box__content flex items-center float-left'><div class='box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3'>" + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div></div><div class='clear-both'></div>"
+                    // completed = "<div class='intro-x chat-text-box flex items-end float-left mb-4'><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4' style='margin-left:5px;'><img class='rounded-full' src='./test_files/doctor.jpeg'></div><div class='w-full'><div><div class='chat-text-box__content flex items-center float-left'><div class='box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3'>" + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div></div><div class='clear-both'></div>"
+                    completed = "<div class='intro-x chat-text-box flex items-end float-right mb-4' style='margin-right: 20px;'><div class='w-full'><div><div class='chat-text-box__content flex items-center float-right'><div class='box leading-relaxed bg-theme-1 text-opacity-80 text-white px-4 py-3 mt-3'> " + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs' style='padding-top: 10px;'>" + new Date().toLocaleString() + "</div></div><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative ml-4' style='margin-right:5px;'><img class='rounded-full' src='./test_files/doctor.jpeg'></div></div><div class='clear-both'></div>" 
+
                     actionCompleted({
                         action: 'Send a message'
                     });
@@ -603,7 +621,9 @@
                         });
                     }
                 } else {
-                    completed = "<div class='intro-x chat-text-box flex items-end float-right mb-4'><div class='w-full'><div><div class='chat-text-box__content flex items-center float-right'><div class='box leading-relaxed bg-theme-1 text-opacity-80 text-white px-4 py-3 mt-3'> " + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative ml-4' style='margin-right:5px;'><img class='rounded-full' src='./test_files/user.png'></div></div><div class='clear-both'></div>" // Interactive Demo only
+                    // completed = "<div class='intro-x chat-text-box flex items-end float-right mb-4'><div class='w-full'><div><div class='chat-text-box__content flex items-center float-right'><div class='box leading-relaxed bg-theme-1 text-opacity-80 text-white px-4 py-3 mt-3'> " + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative ml-4' style='margin-right:5px;'><img class='rounded-full' src='./test_files/user.png'></div></div><div class='clear-both'></div>" 
+                    completed = "<div class='intro-x chat-text-box flex items-end float-left mb-4'  style='margin-left: 20px;'><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4' style='margin-left:5px;'><img class='rounded-full' src='./test_files/user.png'></div><div class='w-full'><div><div class='chat-text-box__content flex items-center float-left'><div class='box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3'>" + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'  style='padding-top: 10px;'>" + new Date().toLocaleString() + "</div></div></div><div class='clear-both'></div>"
+
                     actionCompleted({
                         action: 'Open the app in another tab and receive a message'
                     });
