--- a/medical-history.html
+++ b/medical-history.html
@@ -329,7 +329,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:30 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none; font-size: 15px;">Patient ended the chat.</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0;box-shadow: none; font-size: 15px;">Patient ended the chat.</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -342,7 +342,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 08:10 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;font-size: 15px;">You updated the prescription for Dewi Sinta</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0;box-shadow: none;font-size: 15px;">You updated the prescription for Dewi Sinta</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -355,7 +355,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 08:00 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0;box-shadow: none;font-size: 15px;">You updated the prescription for Dewi Sinta</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0;box-shadow: none;font-size: 15px;">You updated the prescription for Dewi Sinta</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -368,7 +368,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:35 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">You validated patient’s birthdate</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">You validated patient’s birthdate</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -381,7 +381,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:34 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">You initiated chat with Dewi Sinta</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">You initiated chat with Dewi Sinta</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -394,7 +394,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:33 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">Chatbot confirmed patient identity</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">Chatbot confirmed patient identity</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -407,7 +407,7 @@
                             <div>
                                 <div class="text-gray-600 text-xs">22 Sep 2023, 07:30 AM</div>
                                 <div class="chat-text-box__content flex items-center float-left" style="background-color: transparent;">
-                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: 0px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">Patient initiated the chat.</div>
+                                    <div class="box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3" style="margin-top: -5px; background-color: transparent; padding-left: 0; box-shadow: none;font-size: 15px;">Patient initiated the chat.</div>
                                 </div>
                                 <div class="clear-both"></div>
                             </div>
@@ -474,8 +474,9 @@
                 var completed = "";
                 var message = ('' + m).replace(/[<>]/g, '');
                 if (id === publisher) {
-                    // Interactive Demo only
-                    completed = "<div class='intro-x chat-text-box flex items-end float-left mb-4'><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4' style='margin-left:5px;'><img class='rounded-full' src='./test_files/doctor.jpeg'></div><div class='w-full'><div><div class='chat-text-box__content flex items-center float-left'><div class='box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3'>" + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div></div><div class='clear-both'></div>"
+                    // completed = "<div class='intro-x chat-text-box flex items-end float-left mb-4'><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4' style='margin-left:5px;'><img class='rounded-full' src='./test_files/doctor.jpeg'></div><div class='w-full'><div><div class='chat-text-box__content flex items-center float-left'><div class='box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3'>" + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div></div><div class='clear-both'></div>"
+                    completed = "<div class='intro-x chat-text-box flex items-end float-right mb-4'><div class='w-full'><div><div class='chat-text-box__content flex items-center float-right'><div class='box leading-relaxed bg-theme-1 text-opacity-80 text-white px-4 py-3 mt-3'> " + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative ml-4' style='margin-right:5px;'><img class='rounded-full' src='./test_files/user.png'></div></div><div class='clear-both'></div>" 
+
                     actionCompleted({
                         action: 'Send a message'
                     });
@@ -488,7 +489,9 @@
                         });
                     }
                 } else {
-                    completed = "<div class='intro-x chat-text-box flex items-end float-right mb-4'><div class='w-full'><div><div class='chat-text-box__content flex items-center float-right'><div class='box leading-relaxed bg-theme-1 text-opacity-80 text-white px-4 py-3 mt-3'> " + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative ml-4' style='margin-right:5px;'><img class='rounded-full' src='./test_files/user.png'></div></div><div class='clear-both'></div>" // Interactive Demo only
+                    // completed = "<div class='intro-x chat-text-box flex items-end float-right mb-4'><div class='w-full'><div><div class='chat-text-box__content flex items-center float-right'><div class='box leading-relaxed bg-theme-1 text-opacity-80 text-white px-4 py-3 mt-3'> " + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative ml-4' style='margin-right:5px;'><img class='rounded-full' src='./test_files/user.png'></div></div><div class='clear-both'></div>" 
+                    completed = "<div class='intro-x chat-text-box flex items-end float-left mb-4'><div class='chat-text-box__photo w-10 h-10 hidden sm:block flex-none image-fit relative mr-4' style='margin-left:5px;'><img class='rounded-full' src='./test_files/doctor.jpeg'></div><div class='w-full'><div><div class='chat-text-box__content flex items-center float-left'><div class='box leading-relaxed dark:text-gray-300 text-gray-700 px-4 py-3 mt-3'>" + message + "</div></div><div class='clear-both'></div></div><div class='text-gray-600 text-xs'>" + new Date().toLocaleString() + "</div></div></div><div class='clear-both'></div>"
+
                     actionCompleted({
                         action: 'Open the app in another tab and receive a message'
                     });
