--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                             <div style="float:left;width: 10%;margin: 15px;">
                                 <img src="./test_files/foto.png" width="60" height="60">
                             </div>
-                            <div style="float:left;width: 36%;margin: 15px; ">
+                            <div style="float:left;width: 38%;margin: 15px; ">
                                 <p>Name</p>
                                 <p style="font-weight: bold;">Dewi Sinta</p>
                                 <p style="margin-top: 10px;">Sex</p>
@@ -511,8 +511,7 @@
                         </div>
                         <div style="float:right;width: 48.5%; height:300px; margin-left: 10px; margin-bottom: 15px;font-family: 'IBM Plex Sans'; ">
                             <div class="text-base font-medium " style="font-weight: 600;">Prescription</div>
-                            <textarea name="w3review" id="presq" rows="7" cols="50" placeholder="Type your prescription here for the patient..." style="resize: none;width: 100%; border-radius: 5px;padding: 10px; border: 1px solid #E0E0E0;">
-                                </textarea>
+                            <textarea name="w3review" id="presq" rows="7" cols="50" placeholder="Type your prescription here for the patient..."  style="resize: none;width: 100%; border-radius: 5px;padding: 10px; border: 1px solid #E0E0E0;"></textarea>
                             <div style="text-align: right;">
                                 <a href="#popup-warning-chronic"><button class="button-last" style="background-color: transparent; color:blue;" role="button">Reset all</button></a>
                                <button class="button-last" role="button" id="savePres" type="submit">Save</button>
